Package_Tools/include-C/vips/h/image.h

/* If you read MSB first, you get these two values.
 * intel order: byte 0 = b6
 * SPARC order: byte 0 = 08
 */
#define VIPS_MAGIC_INTEL (0xb6a6f208U)
#define VIPS_MAGIC_SPARC (0x08f2a6b6U)
/* We have a maximum value for a coordinate at various points for sanity
 * checking. For example, vips_black() has a max with and height. We use int
 * for width/height so we could go up to 2bn, but it's good to have a lower
 * value set so we can see crazy numbers early.
 *
 * This was 1m for a while, but someone found a use for a 4m wide image.
 */
#define VIPS_MAX_COORD (10000000)
typedef enum {
	VIPS_DEMAND_STYLE_ERROR = -1,
	VIPS_DEMAND_STYLE_SMALLTILE,
	VIPS_DEMAND_STYLE_FATSTRIP,
	VIPS_DEMAND_STYLE_THINSTRIP,
	VIPS_DEMAND_STYLE_ANY
} VipsDemandStyle;
/* Types of image descriptor we may have. The type field is advisory only: it
 * does not imply that any fields in IMAGE have valid data.
 */
typedef enum {
	VIPS_IMAGE_ERROR = -1,
	VIPS_IMAGE_NONE,		   /* no type set */
	VIPS_IMAGE_SETBUF,		   /* malloced memory array */
	VIPS_IMAGE_SETBUF_FOREIGN, /* memory array, don't free on close */
	VIPS_IMAGE_OPENIN,		   /* input from fd with a window */
	VIPS_IMAGE_MMAPIN,		   /* memory mapped input file */
	VIPS_IMAGE_MMAPINRW,	   /* memory mapped read/write file */
	VIPS_IMAGE_OPENOUT,		   /* output to fd */
	VIPS_IMAGE_PARTIAL		   /* partial image */
} VipsImageType;
typedef enum {
	VIPS_INTERPRETATION_ERROR = -1,
	VIPS_INTERPRETATION_MULTIBAND = 0,
	VIPS_INTERPRETATION_B_W = 1,
	VIPS_INTERPRETATION_HISTOGRAM = 10,
	VIPS_INTERPRETATION_XYZ = 12,
	VIPS_INTERPRETATION_LAB = 13,
	VIPS_INTERPRETATION_CMYK = 15,
	VIPS_INTERPRETATION_LABQ = 16,
	VIPS_INTERPRETATION_RGB = 17,
	VIPS_INTERPRETATION_CMC = 18,
	VIPS_INTERPRETATION_LCH = 19,
	VIPS_INTERPRETATION_LABS = 21,
	VIPS_INTERPRETATION_sRGB = 22,
	VIPS_INTERPRETATION_YXY = 23,
	VIPS_INTERPRETATION_FOURIER = 24,
	VIPS_INTERPRETATION_RGB16 = 25,
	VIPS_INTERPRETATION_GREY16 = 26,
	VIPS_INTERPRETATION_MATRIX = 27,
	VIPS_INTERPRETATION_scRGB = 28,
	VIPS_INTERPRETATION_HSV = 29,
	VIPS_INTERPRETATION_LAST = 30
} VipsInterpretation;
typedef enum {
	VIPS_FORMAT_NOTSET = -1,
	VIPS_FORMAT_UCHAR = 0,
	VIPS_FORMAT_CHAR = 1,
	VIPS_FORMAT_USHORT = 2,
	VIPS_FORMAT_SHORT = 3,
	VIPS_FORMAT_UINT = 4,
	VIPS_FORMAT_INT = 5,
	VIPS_FORMAT_FLOAT = 6,
	VIPS_FORMAT_COMPLEX = 7,
	VIPS_FORMAT_DOUBLE = 8,
	VIPS_FORMAT_DPCOMPLEX = 9,
	VIPS_FORMAT_LAST = 10
} VipsBandFormat;
typedef enum {
	VIPS_CODING_ERROR = -1,
	VIPS_CODING_NONE = 0,
	VIPS_CODING_LABQ = 2,
	VIPS_CODING_RAD = 6,
	VIPS_CODING_LAST = 7
} VipsCoding;
typedef enum {
	VIPS_ACCESS_RANDOM,
	VIPS_ACCESS_SEQUENTIAL,
	VIPS_ACCESS_SEQUENTIAL_UNBUFFERED,
	VIPS_ACCESS_LAST
} VipsAccess;
/* Don't put spaces around void here, it breaks gtk-doc.
 */
extern
GType vips_image_get_type(void);
/* Has to be guint64 and not size_t/off_t since we have to be able to address
 * huge images on platforms with 32-bit files.
 */

/* Pixel address calculation macros.
 */
extern
void vips_progress_set(gboolean progress);
extern
void vips_image_invalidate_all(VipsImage *image);
extern
void vips_image_minimise_all(VipsImage *image);
extern
gboolean vips_image_is_sequential(VipsImage *image);
extern
void vips_image_set_progress(VipsImage *image, gboolean progress);
extern
gboolean vips_image_iskilled(VipsImage *image);
extern
void vips_image_set_kill(VipsImage *image, gboolean kill);
extern
char *vips_filename_get_filename(const char *vips_filename);
extern
char *vips_filename_get_options(const char *vips_filename);
extern
VipsImage *vips_image_new(void);
extern
VipsImage *vips_image_new_memory(void);
extern
VipsImage *vips_image_memory(void);
extern
VipsImage *vips_image_new_from_file(const char *name, ...)
	;
extern
VipsImage *vips_image_new_from_file_RW(const char *filename);
extern
VipsImage *vips_image_new_from_file_raw(const char *filename,
	int xsize, int ysize, int bands, guint64 offset);
extern
VipsImage *vips_image_new_from_memory(const void *data, size_t size,
	int width, int height, int bands, VipsBandFormat format);
extern
VipsImage *vips_image_new_from_memory_copy(const void *data, size_t size,
	int width, int height, int bands, VipsBandFormat format);
extern
VipsImage *vips_image_new_from_buffer(const void *buf, size_t len,
	const char *option_string, ...)
	;
extern
VipsImage *vips_image_new_from_source(VipsSource *source,
	const char *option_string, ...) ;
extern
VipsImage *vips_image_new_matrix(int width, int height);
extern
VipsImage *vips_image_new_matrixv(int width, int height, ...);
extern
VipsImage *vips_image_new_matrix_from_array(int width, int height,
	const double *array, int size);
extern
VipsImage *vips_image_matrix_from_array(int width, int height,
	const double *array, int size);
extern
VipsImage *vips_image_new_from_image(VipsImage *image,
	const double *c, int n);
extern
VipsImage *vips_image_new_from_image1(VipsImage *image, double c);
extern
void vips_image_set_delete_on_close(VipsImage *image,
	gboolean delete_on_close);
extern
guint64 vips_get_disc_threshold(void);
extern
VipsImage *vips_image_new_temp_file(const char *format);
extern
int vips_image_write(VipsImage *image, VipsImage *out);
extern
int vips_image_write_to_file(VipsImage *image, const char *name, ...)
	;
extern
int vips_image_write_to_buffer(VipsImage *in,
	const char *suffix, void **buf, size_t *size, ...)
	;
extern
int vips_image_write_to_target(VipsImage *in,
	const char *suffix, VipsTarget *target, ...)
	;
extern
void *vips_image_write_to_memory(VipsImage *in, size_t *size);
extern
int vips_image_decode_predict(VipsImage *in,
	int *bands, VipsBandFormat *format);
extern
int vips_image_decode(VipsImage *in, VipsImage **out);
extern
int vips_image_encode(VipsImage *in, VipsImage **out, VipsCoding coding);
extern
gboolean vips_image_isMSBfirst(VipsImage *image);
extern
gboolean vips_image_isfile(VipsImage *image);
extern
gboolean vips_image_ispartial(VipsImage *image);
extern
gboolean vips_image_hasalpha(VipsImage *image);
extern
VipsImage *vips_image_copy_memory(VipsImage *image);
extern
int vips_image_wio_input(VipsImage *image);
extern
int vips_image_pio_input(VipsImage *image);
extern
int vips_image_pio_output(VipsImage *image);
extern
int vips_image_inplace(VipsImage *image);
extern
int vips_image_write_prepare(VipsImage *image);
extern
int vips_image_write_line(VipsImage *image, int ypos, VipsPel *linebuffer);
extern
gboolean vips_band_format_isint(VipsBandFormat format);
extern
gboolean vips_band_format_isuint(VipsBandFormat format);
extern
gboolean vips_band_format_is8bit(VipsBandFormat format);
extern
gboolean vips_band_format_isfloat(VipsBandFormat format);
extern
gboolean vips_band_format_iscomplex(VipsBandFormat format);
extern
int vips_system(const char *cmd_format, ...)
	;
/* Defined in type.c but declared here, since they use VipsImage.
 */
extern
VipsArrayImage *vips_array_image_new(VipsImage **array, int n);
extern
VipsArrayImage *vips_array_image_newv(int n, ...);
extern
VipsArrayImage *vips_array_image_new_from_string(const char *string,
	VipsAccess flags);
extern
VipsArrayImage *vips_array_image_empty(void);
extern
VipsArrayImage *vips_array_image_append(VipsArrayImage *array,
	VipsImage *image);
extern
VipsImage **vips_array_image_get(VipsArrayImage *array, int *n);
extern
VipsImage **vips_value_get_array_image(const GValue *value, int *n);
extern
void vips_value_set_array_image(GValue *value, int n);
/* Defined in reorder.c, but really a function on image.
 */
extern
int vips_reorder_prepare_many(VipsImage *image,
	VipsRegion **regions, VipsRect *r);
extern
void vips_reorder_margin_hint(VipsImage *image, int margin);
extern
void vips_image_free_buffer(VipsImage *image, void *buffer);